assets/css/style.css
/* ... */
button:focus {
  box-shadow: 0px 0px 10px rgb(255 255 255 / 50%);
}

/* weather section */

.weather-component__AQI {
  width: max-content;
  display: flex;
  flex-direction: row;
}

.weather-component__city-temperature {
  margin-left: 10%;
  margin-top: 10px;
  margin-bottom: 15px;
  width: 80%;
  font-size: 2.8rem;
  font-weight: 500;
  font-family: "Inter", sans-serif;
  /* text-shadow: 3px 6px 3px rgba(0, 0, 0, 0.5); */
  background-color: rgba(219, 228, 228, 0.32);
  border-radius: 32px;
  padding: 5px;
}

.weather-component__data {
  padding: 16px;
}

.weather-component__desc-primary {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  gap: 5rem;
  padding: 0 10px;
  margin-bottom: 10px;
  background-color: rgba(219, 228, 228, 0.32);
  border-radius: 32px;
  height: 4rem;
  width: 20rem;
  margin: 20px 25px 15px 35px;
}

.weather-component__icn {
  height: 50px;
  margin-bottom: 0;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.weather-component__icn img {
  width: 50px;
  height: 50px;
}

#AirQuality {
  margin: 0 5px;
}

.loading {
  visibility: hidden;
  max-height: 20px;
  position: relative;
}

.loading:after {
  display: flex;
  justify-content: center;
  align-items: center;
  visibility: visible;
  content: "Loading...";
  position: absolute;
  right: 50%;
  top: 15px;
  /* bottom: 50%; */
  left: 50%;
}

/* Global Styles */

.flex-1 {
  flex: 1;
}

.transition {
  transition: 2s;
}

/* Forecast */
.forecast-component {
  position: relative;
  top: 2.5rem;
}

.forecast-img {
  height: 50px;
  width: 50px;
}

.forecast-img img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.forecast-component__items-wrapper {
  display: grid;
  grid-template-columns: auto auto auto auto auto auto;
  grid-gap: 0.6rem;
  align-items: center;
  font-family: "Inter", sans-serif;
}

.forecast-component__item {
  position: relative;
  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
  border-radius: 20px;
  background: rgba(255, 255, 255, 0.1);
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-top: 1px solid rgba(255, 255, 255, 0.5);
  border-left: 1px solid rgba(255, 255, 255, 0.5);
  backdrop-filter: blur(5px);
  height: 210px;
  width: 100%;
  min-width: max-content;
  margin: 1%;

}

.w-100{
  width: 111%!important;
}

.forecast-component__item img {
  width: 50px;
  height: 50px;
}

.forecast-component__item:hover {
  backdrop-filter: blur(16px) saturate(180%);
  -webkit-backdrop-filter: blur(16px) saturate(180%);
  background-color: rgb(9, 32, 63, 0.75);

  border-radius: 12px;
  cursor: pointer;
}

/* images and icons  for wind-speed,sunrise,sunset,humidity*/

.humidity-img {
  width: 20px;
  height: 20px;
  margin: 0 10px 0 10px;
}

.wind-img {
  width: 25px;
  height: 25px;
  margin: 0 10px 0 10px;
}

.sunrise-img {
  width: 25px;
  height: 25px;

  margin: 0 10px 0 0;
}

.sunset-img {
  width: 30px;
  height: 30px;
  margin: 0 8px 0 0px;
}

.weather-component__city-name {
  text-align: center;
  font-size: 2rem;
  font-weight: 100;
  /* text-shadow: 2px 4px rgba(0, 0, 0, 0.885), 2px 4px rgba(0, 0, 0, 0.885); */
}

.weather-component__city-temperature {
  text-align: center;
}

.humidity {
  margin: 10px;
  height: 28px;
}

.wind {
  margin: 10px;
}

.sunrise {
  margin: 10px;
  height: 28px;
  align-items: center;
}

.sunset {
  margin: 10px;
  height: 28px;
  align-items: center;
}

/* toast style */
.center {
  text-align: center;
}

#toast {
  visibility: hidden;
  min-width: 170px;
  background: #fafafacd;
  box-shadow: rgb(0 0 0 / 40%) 0px 3px 8px;
  color: black;
  text-align: center;
  border-radius: 10px;
  padding: 7px 4px;
  position: fixed;
  top: 15px;
  z-index: 3000;
  right: 16px;
  font-size: 16px;
  transform: translateY(-100%); /* Start off the screen */
  transition: transform 0.25s ease-in-out; /* Transition for sliding */
}

#toast.show {
  visibility: visible;
  transform: translateY(0); /* Slide in from the top */
}

footer {
  height: 300px;
  display: flex;
  position: relative;
  top: 240px;
  justify-content: center;
  align-items: center;
  text-decoration-color: white;
  text-emphasis-style: bold;
}

/* .col-auto {
  margin: 10px 20px;
}  */

@-webkit-keyframes fadein {
  from {
    bottom: 0;
    opacity: 0;
  }

  to {
    bottom: 30px;
    opacity: 1;
  }
}

@keyframes fadein {
  from {
    bottom: 0;
    opacity: 0;
  }

  to {
    bottom: 30px;
    opacity: 1;
  }
}

@-webkit-keyframes fadeout {
  from {
    bottom: 30px;
    opacity: 1;
  }

  to {
    bottom: 0;
    opacity: 0;
  }
}

@keyframes fadeout {
  from {
    bottom: 30px;
    opacity: 1;
  }

  to {
    bottom: 0;
    opacity: 0;
  }
}

.toast-component__checkicon i {
  font-size: 40px;
  color: #47d764;
}

/* --Scroll Bar-- */

/* width */

::-webkit-scrollbar {
  width: 10px;
}

/* Track */

::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 5px;
  background-clip: content-box;
}

/* Handle */

::-webkit-scrollbar-thumb {
  background: #171717;
  border-radius: 5px;
}

/* Handle on hover */

::-webkit-scrollbar-thumb:hover {
  background: #171717;
}

/* --End Of Scroll Bar-- */
.footerSection {
  margin-top: 20px;
  margin-bottom: 0;
}
/* Responsive */

@media only screen and (min-width: 1200px) {
  .forecast-component__items-wrapper {
    grid-template-columns: auto auto auto auto;
  }
}

@media only screen and (max-width: 992px) {
  .forecast-component__items-wrapper {
    grid-template-columns: auto auto auto auto;
  }
}
/* ... */

